@@ -1712,6 +1712,24 @@ SOUNDPATH=http://localhost:27744/sounds/
 MXPIMAGEPATH=http://localhost:27744/images/mxp
 
 ######################################################################
+# MSSP/MSDP Protocols
+######################################################################
+
+# MSXPVARS (optional)
+# This is an optional list of comma-separated key=value pairs for 
+# any additional information to report to crawlers looking for quick
+# publishable information about your mud.  Most variables are generated
+# by the mud automatically.  Some extra variables to define include: 
+# LOCATION, MINIMUM AGE, IP, DISCORD, IPV6, GAMEPLAY, SUBGENRE, 
+# PAY TO PLAY, PAY FOR PERKS, HIRING BUILDERS, HIRING CODERS,
+# CONTACT.
+# * for true/false variables, use 1 for true, 0 for false
+# * see https://tintin.mudhalla.net/protocols/mssp/ for more information
+# * some variables may be included more than once
+#  
+MSXPVARS=GENRE=Fantasy,GAMEPLAY=Adventure,GAMEPLAY=Social
+
+######################################################################
 # Default Economy Configuration
 ######################################################################
 
