@@ -1661,6 +1661,13 @@
 		<FONT COLOR=WHITE>@INIValue?MASK=MXPIMAGEPATH&INIHELP@</FONT>
 		</TD></TR>
 		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>MSXPVARS</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=MSXPVARS SIZE=80 VALUE="@INIValue?MASK=MSXPVARS&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=MSXPVARS&INIHELP@</FONT>
+		</TD></TR>
+		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>LISTFILE</FONT>
 		</TD><TD WIDTH=80% VALIGN=TOP>
 		<INPUT TYPE=TEXT NAME=LISTFILE SIZE=40 VALUE="@INIValue?MASK=LISTFILE&VALUE@">
