@@ -1,5 +1,6 @@
 # Build 5.10.4 Release ??/??/2024
-  1. Races/GenRaces support cultural ability parms
+  1. Races/GenRaces support parameters for cultural abilities.
+  2. Better MSSP/MSDP support.  New INI entry: MSXPVARS.
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
